--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="password">Password</string>
     <string name="username">Username</string>
     <string name="login">Login</string>
+    <string name="title_activity_claim">ClaimActivity</string>
+    <string name="new_claim">New Claim</string>
+    <string name="search">Search</string>
 
 </resources>
