--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -10,5 +10,12 @@
     <string name="title_activity_claim">ClaimActivity</string>
     <string name="new_claim">New Claim</string>
     <string name="search">Search</string>
+    <string name="create_claim">Create Claim</string>
+    <string name="description">Description</string>
+    <string name="destinations">Distinations</string>
+    <string name="new_word">New</string>
+    <string name="claim_name">Claim Name</string>
+    <string name="end_date">End Date</string>
+    <string name="start_date">Start Date</string>
 
 </resources>
