Added calendar dialog boxes

--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="search">Search</string>
     <string name="create_claim">Create Claim</string>
     <string name="description">Description</string>
-    <string name="destinations">Distinations</string>
+    <string name="destinations">Destinations</string>
     <string name="new_word">New</string>
     <string name="claim_name">Claim Name</string>
     <string name="end_date">End Date</string>
