--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -18,5 +18,9 @@
     <string name="end_date">End Date</string>
     <string name="start_date">Start Date</string>
     <string name="finish">Finish</string>
+    <string name="destination_title">Add a Travel Destination</string>
+    <string name="cancel">Cancel</string>
+    <string name="destination_singular">Destination</string>
+    <string name="reason">Reason for Travel</string>
 
 </resources>
