--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -22,5 +22,6 @@
     <string name="cancel">Cancel</string>
     <string name="destination_singular">Destination</string>
     <string name="reason">Reason for Travel</string>
+    <string name="approverLogin">Login as Approver</string>
 
 </resources>
