--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -31,4 +31,7 @@
 	<string name="Amount">Amount</string>
 	<string name="date">Date</string>
 	<string name="Category">Category</string>
+	<string name="edit">Edit</string>
+	<string name="submit">Submit</string>
+	<string name="delete">Delete</string>
 </resources>
