Added updating adapter layout and approver/claimaint view skeleton code

--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -37,5 +37,6 @@
     <string name="title_activity_test">TestActivity</string>
     <string name="title_activity_main">MainActivity</string>
     <string name="title_activity_expense_viewer">ExpenseViewerActivity</string>
+    <string name="view">View</string>
 
 </resources>
