Everything displays probably want to not show ids

--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -42,5 +42,6 @@
     <string name="approve">Approve</string>
     <string name="return_claim">Return</string>
     <string name="tags">Tags</string>
+    <string name="$">$</string>
 
 </resources>
