Added docs and some return/approve fuctionality

--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -43,5 +43,6 @@
     <string name="return_claim">Return</string>
     <string name="tags">Tags</string>
     <string name="$">$</string>
+    <string name="newlines">\n\n</string>
 
 </resources>
