Edit claims works a little

--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -49,5 +49,8 @@
     <string name="ApproverCommentHint">Input Comments</string>
     <string name="ButtonCommitApproverComment">Commit</string>
     <string name="ApproverCommentView">Comment</string>
+    <string name="title_activity_tag_choice_frgament">Add or Edit</string>
+    <string name="editExisting">Edit Existing</string>
+    <string name="next">Next</string>
 
 </resources>
