--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -52,5 +52,6 @@
     <string name="title_activity_tag_choice_frgament">Add or Edit</string>
     <string name="editExisting">Edit Existing</string>
     <string name="next">Next</string>
+    <string name="update">Update</string>
 
 </resources>
