Annoyingly, you can only select one item from a spinner. So filter is now a button

--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -53,5 +53,7 @@
     <string name="editExisting">Edit Existing</string>
     <string name="next">Next</string>
     <string name="update">Update</string>
+    <string name="filter">Filter</string>
+    <string name="title_activity_filter_fragment_dialog">Filter By Tags</string>
 
 </resources>
