turns out what I found wasn't so good for multiple item selection. Changed again to accomodate this

--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -55,5 +55,6 @@
     <string name="update">Update</string>
     <string name="filter">Filter</string>
     <string name="title_activity_filter_fragment_dialog">Filter By Tags</string>
+    <string name="filterMenu">Filter Claims By Tag</string>
 
 </resources>
