added a manage tags button. There are bugs but will fix tomorrow

--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -56,5 +56,6 @@
     <string name="filter">Filter</string>
     <string name="title_activity_filter_fragment_dialog">Filter By Tags</string>
     <string name="filterMenu">Filter Claims By Tag</string>
+    <string name="manageTags">Manage Tags</string>
 
 </resources>
