Added incompleteness mark, and updated some warnings

--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -57,5 +57,6 @@
     <string name="title_activity_filter_fragment_dialog">Filter By Tags</string>
     <string name="filterMenu">Filter Claims By Tag</string>
     <string name="manageTags">Manage Tags</string>
+    <string name="exclamation">!</string>
 
 </resources>
