Added dialog to select location

--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -58,6 +58,8 @@
     <string name="filterMenu">Filter Claims By Tag</string>
     <string name="manageTags">Manage Tags</string>
     <string name="addExisting">Add Existing</string>
-    <string name="geo">Set Location</string>
+    <string name="set_location">Set Location</string>
+    <string name="gps_location">Use Phone\'s GPS</string>
+    <string name="map_location">Pick from a map</string>
 
 </resources>
