--- a/TravelPlanner/res/values/strings.xml
+++ b/TravelPlanner/res/values/strings.xml
@@ -62,5 +62,5 @@
     <string name="gps_location">Use Phone\'s GPS</string>
     <string name="map_location">Pick from a map</string>
     <string name="add_A_Receipt">Attach A Receipt</string>
-
+	<string name="remove">Remove</string>
 </resources>
